# tbtlarchivist

./: .gitignore  flyway.conf  go.mod  go.sum  makefile  readme.md  scratch.txt  scratch_sorted.txt
db/migrations/: V0__Bootstrap.sql
deploy/: main.tf
docs/: readme.md
go/: go.mod  go.sum
hosts/researcher/: main.go
messages/: messages.proto
pacer/: pkg.go
playground/: makefile  receive  receive.go
protobuf/: contracts.proto
rust/: Cargo.toml
rust/analyzer/: Cargo.toml
rust/analyzer/benches/: benchmark.rs
rust/analyzer/src/: errors.rs  lib.rs
rust/analyzer/src/accessor/: mod.rs
rust/analyzer/src/accessors/: file.rs  http.rs  mod.rs
rust/analyzer/src/engine/: cosine_similarity.rs  mod.rs
rust/analyzer/src/engines/: cosine_similarity.rs  mod.rs
rust/analyzer/src/engines/cosim_progressive/: internals.rs  mod.rs
rust/analyzer/src/engines/cosim_progressive/tests/: find_offsets_tests.rs  internals_tests.rs  mp3_to_raw_tests.rs
rust/analyzer/src/engines/cosim_two_pass/: mod.rs
rust/analyzer/src/engines/cosim_two_pass/tests/: find_offsets_tests.rs  internals_tests.rs  mod.rs  mp3_to_raw_tests.rs
rust/analyzer/src/engines/cosine_similarity/: internals.rs  mod.rs  tests.rs
rust/analyzer/src/engines/cosine_similarity/tests/: cosine_similarity_tests.rs  find_offsets_tests.rs  fingerprint_tests.rs  internals_tests.rs  mod.rs  mp3_to_raw_tests.rs
rust/analyzer/src/manager/: mod.rs
rust/analyzer/src/managers/: mod.rs  standard.rs
rust/analyzer/src/utils/: mod.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
sandbox/: notes
(+138 files in other folders)
