
[package]
name = "analyzer"
version = "0.1.0"
authors = ["Joe <jecolasurdo@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../contracts" }
wav = "0.4.1"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.0"
thiserror = "1.0.21"
anyhow = "1.0.38" 
rayon = "1.5.0"
protobuf = "2.22.0"
cancel = "0.1.0" 
ureq = "2.0.2" 