
[package]
name = "analyzer"
version = "0.1.0"
authors = ["Joe <jecolasurdo@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../contracts" }
wav = "0.6.0"
minimp3 = "0.5.1" 
rubato = "0.7.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.0"
thiserror = "1.0.21"
rayon = "1.5.0"
protobuf = "2.22.0"
cancel = "0.1.0" 
ureq = "2.0.2" 
conv = "0.3.3"
image = "0.23.14"
img_hash = "3.1.1"

[dev-dependencies]
criterion = "0.3"
hound = "3.4.0"
anyhow = "1.0.38" 

[[bench]]
name = "benchmark"
harness = false